<resources>

    <string name="app_name">Artic Store</string>
    <string name="loginTitle">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="wrong_username_or_password">Wrong username or password !</string>
    <string name="ip_address">IP Address</string>
    <string name="ip_port">IP Port</string>
    <string name="company_no">Company No</string>
    <string name="ip_settings">IP Settings</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="customerName">Customer Name</string>
    <string name="customer_name">Customer Name:</string>
    <string name="required">*Required</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="itemNCode">itemNCode</string>
    <string name="qty">Quantity</string>
    <string name="unit">Unit:</string>
    <string name="itemKind">itemKind</string>
    <string name="preview">Preview</string>
    <string name="date">Date</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="reqired_filled">*Required</string>
    <string name="save"> Save</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_with">Sign in now with your username and password !</string>
    <string name="login_as">Login as:</string>
    <string name="request">Request</string>
    <string name="VOchNum">VOcher Number</string>
    <string name="PassowrdSetting">Passowrd Setting</string>
    <string name="item_Code">Item Code</string>
    <string name="item_Name_">Item Name</string>
    <string name="item_name">Item name:</string>
    <string name="item_Ncode">Item Ncode:</string>
    <string name="item_kind">Item kind:</string>
    <string name="tax">Tax:</string>
    <string name="total">Total price</string>
    <string name="total_">Total</string>
    <string name="tax_">Tax</string>
    <string name="price">Price:</string>
    <string name="price_">Price</string>
    <string name="discount">Discount:</string>
    <string name="discount_">Discount</string>
    <string name="quantity">Quantity:</string>
    <string name="area">Area:</string>
    <string name="area_">Area</string>
    <string name="box">Box</string>
    <string name="meter">Meter</string>
    <string name="show">Show</string>
    <string name="VoHNO">Order No</string>
    <string name="addnewuser">Add New User</string>
    <string name="addnewcustomer">Add New Customer</string>
    <string name="invaledZero">Invaled Zero</string>

    <string name="emptyList">Empty List</string>

    <string name="avlqty">Available Qty:</string>
    <string name="type">Type:</string>
    <string name="dis_per">Can add discount ?</string>
    <string name="mobilnum">Mobile number:</string>
    <string name="Empty">Empty</string>
    <string name="savedSuccsesfule">Saved Successfully</string>
    <string name="Order">Order</string>
    <string name="fillbasket">fill The basket with Items!!</string>
    <string name="vocher">Vocher</string>
    <string name="incorrect_user_info">Incorrect User Information !</string>

    <string name="add_item_to">Add item to cart ?</string>
    <string name="customer">Customer</string>
    <string name="search_items">Search Items ..</string>
    <string name="cart">Cart</string>
    <string name="add">Add</string>
    <string name="reports">Reports</string>
    <string name="export">Export</string>
    <string name="home">Home</string>
    <string name="save_for_later">Save for later</string>
    <string name="user_already_exists">Username Already Exists !</string>
    <string name="net_sales">Net Sales</string>
    <string name="Sub_total">Sub total</string>
    <string name="item_list">Item List</string>

    <string name="export_data_msg">Do you want to export all data and get the new data\nfrom the server?</string>
    <string name="export_data">Export Data</string>
    <string name="MaxVoMsg1">Max Vocher Num is</string>
    <string name="MaxVoMsg2">,so you can set Vocher Num</string>
    <string name="MaxVoMsg3">and above</string>
    <string-array name="user_type">
        <item>Admin</item>
        <item>User</item>
    </string-array>
</resources>