<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@drawable/ic_list"
        android:title="@string/item_list"
        />

    <item
        android:id="@+id/action_cart"
        android:enabled="true"
        android:icon="@drawable/cart_ic"
        android:title="@string/cart"/>
    <item
        android:id="@+id/action_add"
        android:enabled="true"
        android:icon="@drawable/add_ic"
        android:title="@string/add"/>
    <item
        android:id="@+id/action_report"
        android:enabled="true"
        android:icon="@drawable/report_ic"
        android:title="@string/reports"/>

    <item
        android:id="@+id/exportdata"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_arrow_circle_up_24"
        android:title="@string/export"/>

</menu>