<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:orientation="vertical">



    <LinearLayout
        android:orientation="horizontal"
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <TextView android:layout_width="150dp"
            android:layout_height="match_parent"
            android:id="@+id/itemNCode"
            android:padding="3dp"
            android:gravity="center"
            android:text="@string/itemNCode"
            android:textSize="18sp"
            android:textColor="@color/primaryTextColor"/>
        <TextView android:layout_width="150dp"
            android:layout_height="match_parent"
            android:id="@+id/item_name"
            android:gravity="center"
            android:textSize="18sp"
            android:padding="3dp"
            android:text="@string/item_name"
            android:textColor="@color/primaryTextColor"/>
        <TextView android:layout_width="150dp"
            android:layout_height="match_parent"
            android:text="@string/qty"
            android:gravity="center"
            android:id="@+id/qty"
            android:textSize="18sp"
            android:padding="3dp"
            android:textColor="@color/primaryTextColor"/>
        <TextView android:layout_width="150dp"
            android:layout_height="match_parent"
            android:text="@string/price"
            android:id="@+id/price"
            android:gravity="center"
            android:textSize="18sp"
            android:padding="3dp"
            android:textColor="@color/primaryTextColor"/>

        <TextView android:layout_width="150dp"
            android:layout_height="match_parent"
            android:id="@+id/discount"
            android:gravity="center"
            android:text="@string/discount"
            android:padding="3dp"
            android:textSize="18sp"
            android:textColor="@color/primaryTextColor"/>
        <TextView android:layout_width="150dp"
            android:layout_height="match_parent"
            android:text="@string/tax"
            android:textSize="18sp"
            android:padding="3dp"
            android:id="@+id/taxx"
            android:gravity="center"
            android:textColor="@color/primaryTextColor"/>

    </LinearLayout>

</LinearLayout>