<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp">

    <TextView
        android:id="@+id/item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/alegreya"
        android:gravity="start"
        android:lineHeight="19sp"
        android:text="@string/item_Name_"
        android:textColor="@color/primaryTextColor"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/item_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/alegreya"
        android:gravity="center"
        android:lineHeight="19sp"
        android:text="@string/item_Code"
        android:textColor="@color/primaryTextColor"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/item_qty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/alegreya"
        android:gravity="end"
        android:lineHeight="19sp"
        android:text="@string/qty"
        android:textColor="@color/primaryTextColor"
        android:textSize="14sp" />

</LinearLayout>