<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/main_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:layout_weight="7"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:text="@string/VoHNO"
            android:layout_weight="1"
            android:padding="5dp"
            android:textStyle="bold"
            android:gravity="start"
            android:textColor="@color/primaryTextColor"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/ORDERNO"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="date"
            android:layout_gravity="center"
            android:gravity="center"

            android:textColor="@color/black"
            android:textSize="12sp"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:layout_weight="7"
        android:orientation="horizontal">



        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:padding="5dp"
            android:text="@string/customerName"
            android:layout_weight="1"
            android:textStyle="bold"
            android:gravity="start"
            android:textColor="@color/primaryTextColor"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/Cus_name"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="date"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginEnd="4dp"
            android:textColor="@color/black"
            android:textSize="12sp"
            />



    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_weight="7"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:text="@string/date"
            android:padding="5dp"
            android:layout_weight="1.2"
            android:textStyle="bold"
            android:gravity="start"
            android:textColor="@color/primaryTextColor"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/date"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="date"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:drawableStartCompat="@drawable/ic_date_range_black_24dp" />




        <Button
            android:id="@+id/Rep_order"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/bg_btn"
            android:text="@string/Order"
            android:textColor="@color/white" />
        <Button
            android:id="@+id/print_order"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/ic_baseline_print_24"

            android:textColor="@color/white" />

    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/basketListCard"
        android:layout_width="match_parent"
        android:layout_weight="2.1"
        android:layout_marginBottom="5dp"
        android:layout_height="match_parent"
        android:layout_below="@+id/customer_textInput"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="26dp"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="4dp">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"

            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="23dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">




                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/alegreya"
                        android:gravity="center"
                        android:lineHeight="19sp"
                        android:text="@string/item_Code"
                        android:textColor="@color/primaryTextColor"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/alegreya"
                        android:gravity="center"
                        android:lineHeight="19sp"
                        android:text="@string/item_Name_"
                        android:textColor="@color/primaryTextColor"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/alegreya"
                        android:gravity="center"
                        android:lineHeight="19sp"
                        android:text="@string/qty"
                        android:textColor="@color/primaryTextColor"
                        android:textSize="14sp" />


                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/alegreya"
                        android:gravity="center"
                        android:lineHeight="19sp"
                        android:text="@string/price_"
                        android:textColor="@color/primaryTextColor"
                        android:textSize="14sp" />


                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/alegreya"
                        android:gravity="center"
                        android:lineHeight="19sp"
                        android:text="@string/discount_"
                        android:textColor="@color/primaryTextColor"
                        android:textSize="14sp" />


                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/alegreya"
                        android:gravity="center"
                        android:lineHeight="19sp"
                        android:text="@string/tax_"
                        android:textColor="@color/primaryTextColor"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/alegreya"
                        android:gravity="center"
                        android:lineHeight="19sp"
                        android:text="@string/area_"
                        android:textColor="@color/primaryTextColor"
                        android:textSize="14sp" />
                    <TextView
                        android:layout_width="20dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/alegreya"
                        android:gravity="center"
                        android:lineHeight="19sp"
                        android:background="@drawable/ic_baseline_remove_circle_24"
                        android:visibility="invisible"
                        android:textSize="14sp" />


                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="11dp"
                    android:background="@color/primaryTextColor" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/ordersDetalisRec"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            </LinearLayout>
        </HorizontalScrollView>


    </com.google.android.material.card.MaterialCardView>
    <TableRow
        android:layout_height="match_parent"
        android:layout_weight="7"

        android:background="@color/gray_btn_bg_color"
        android:layout_width="match_parent">
        <TextView
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:textColor="@color/primaryTextColor"
            android:textSize="18sp"
            android:gravity="center"
            android:visibility="gone"

            android:layout_weight="1"
            android:text="@string/total"/>
        <TextView
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_weight="1"
            android:text="0.0"
            android:visibility="gone"
            android:gravity="center"
            android:id="@+id/total"/>

        <TextView
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:textColor="@color/primaryTextColor"
            android:textSize="18sp"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_weight="1"
            android:text="@string/net_sales"/>
        <TextView
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:textColor="@color/amountColor"
            android:textSize="18sp"
            android:layout_weight="1"
            android:text="0.0"
            android:gravity="center"
            android:id="@+id/netsales"/>

        <TextView
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:textColor="@color/primaryTextColor"
            android:textSize="18sp"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_weight="1"
            android:text="@string/tax"/>
        <TextView
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:textColor="@color/amountColor"
            android:textSize="18sp"
            android:layout_weight="1"
            android:text="0.0"
            android:gravity="center"
            android:id="@+id/tax"/>

    </TableRow>
    <include
        android:id="@+id/bottom_navigation"
        layout="@layout/bottom_nav_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</LinearLayout>