<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/white"
        app:strokeWidth="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/grey_gradient"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:gravity="start|center_vertical"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    app:drawableStartCompat="@drawable/settings" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center_vertical"
                    android:text="@string/ip_settings"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    android:textStyle="normal" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/grey" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputIpAddress"
                style="@style/parent"
                android:layout_marginTop="@dimen/loginViewsMargin"
                app:hintTextColor="@color/purple_500">

                <EditText
                    android:id="@+id/ipEdt"
                    style="@style/modifiedEditText"
                    android:layout_marginHorizontal="20dp"
                    android:background="@drawable/edt_back"
                    android:hint="@string/ip_address"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black"
                    android:textColorHint="@color/purple_500" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputPort"
                style="@style/parent"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="@dimen/loginViewsMargin"
                app:hintTextColor="@color/purple_500">

                <EditText
                    android:id="@+id/portEdt"
                    style="@style/modifiedEditText"
                    android:background="@drawable/edt_back"
                    android:hint="@string/ip_port"
                    android:inputType="number"
                    android:maxLines="1"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black"
                    android:textColorHint="@color/purple_500" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputCoNo"
                style="@style/parent"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="@dimen/loginViewsMargin">

                <EditText
                    android:id="@+id/coNoEdt"
                    style="@style/modifiedEditText"
                    android:background="@drawable/edt_back"
                    android:hint="@string/company_no"
                    android:inputType="number"
                    android:maxLines="1"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black"
                    android:textColorHint="@color/purple_500"
                    app:hintTextColor="@color/purple_500" />

            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:background="@drawable/grey_gradient"
                android:gravity="end"
                android:orientation="horizontal"
                android:padding="5dp">

                <Button
                    android:id="@+id/okBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="@string/ok"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/cancelBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:textColor="@color/white" />

            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>